--- a/app/javascript/src/styles/base/040_colors.scss
+++ b/app/javascript/src/styles/base/040_colors.scss
@@ -296,7 +296,7 @@ html, body[data-current-user-theme="light"] {
   --asset-paginator-link-color: var(--link-color);
   --asset-paginator-link-hover-color: var(--link-color);
   --asset-paginator-background-color: var(--white);
-  --asset-paginator-background-hover-color: var(--blue-0);
+  --asset-paginator-background-hover-color: var(--white);
 
   --artist-tag-color: var(--red-6);
   --artist-tag-hover-color: var(--red-5);
